[package]
description = "mdast-compliant Markdown parser in Rust with ASTs and extensions."
documentation = "https://docs.rs/markdown-rs"
edition = "2021"
keywords = ["markdown", "mdast", "ASTs"]
license-file = "LICENSE"
name = "markdown-rs"
readme = "README.md"
version = "0.1.0"

[dependencies]
log = "^0.4"
serde = {version = "1.0", features = ["derive"], optional = true}
thiserror = "^1.0"

[dev-dependencies]
dotenv = "0.15.0"
pretty_env_logger = "^0.5"

[features]
default = ["serde"]
serde = ["dep:serde"]
